<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TemperatureConverter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_screen_title">Fahrenheit - Celsius - Fahrenheit Converter</string>
    <string name="convert_prompt">Convert</string>
    <string name="celsius_prompt">&#160;Degrees Celsius</string>
    <string name="fahrenheit_prompt">&#160;Degrees Fahrenheit</string>
    <string name="result_prompt">The equivalent temperature is:&#160;</string>


</resources>
